--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.525.0",
     "next": "15.4.2",
     "next-auth": "^5.0.0-beta.29",
     "postcss": "^8.5.6",
