--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.52.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "express": "^5.1.0",
     "lucide-react": "^0.525.0",
     "next": "15.4.2",
     "next-auth": "^5.0.0-beta.29",
@@ -30,6 +33,7 @@
     "react-day-picker": "^9.8.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
+    "twilio": "^5.7.3",
     "vaul": "^1.1.2"
   },
   "devDependencies": {
