--- a/package.json
+++ b/package.json
@@ -4,9 +4,22 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "d": "npm run dev",
     "build": "next build",
+    "b": "npm run build",
     "start": "next start",
-    "lint": "next lint"
+    "s": "npm run start",
+    "lint": "next lint",
+    "l": "npm run lint",
+    "format": "prettier --write .",
+    "f": "npm run format",
+    "type-check": "tsc --noEmit",
+    "t": "npm run type-check",
+    "prisma-generate": "prisma generate",
+    "pg": "npm run prisma-generate",
+    "prisma-migrate": "prisma migrate dev",
+    "pm": "npm run prisma-migrate",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@prisma/client": "^6.12.0",
@@ -30,8 +43,10 @@
     "next-auth": "^5.0.0-beta.29",
     "postcss": "^8.5.6",
     "react": "19.1.0",
+    "react-countup": "^6.5.3",
     "react-day-picker": "^9.8.0",
     "react-dom": "19.1.0",
+    "react-intersection-observer": "^9.16.0",
     "tailwind-merge": "^3.3.1",
     "twilio": "^5.7.3",
     "vaul": "^1.1.2"
@@ -44,6 +59,8 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.2",
+    "husky": "^9.1.7",
+    "prettier": "^3.6.2",
     "prisma": "^6.12.0",
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.3.5",
