--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "s": "npm run start",
     "lint": "next lint",
     "l": "npm run lint",
-
     "type-check": "tsc --noEmit",
     "t": "npm run type-check",
     "prisma-generate": "prisma generate",
@@ -38,6 +37,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "express": "^5.1.0",
+    "framer-motion": "^12.23.9",
     "lucide-react": "^0.525.0",
     "next": "15.4.2",
     "next-auth": "^5.0.0-beta.29",
