--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "flowbite-datepicker": "^1.3.2",
     "flowbite-react": "^0.12.4",
     "framer-motion": "^12.23.9",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.525.0",
     "next": "15.4.2",
     "next-auth": "^5.0.0-beta.29",
@@ -53,6 +54,7 @@
     "react-day-picker": "^9.8.1",
     "react-dom": "19.1.0",
     "react-intersection-observer": "^9.16.0",
+    "react-leaflet": "^5.0.0",
     "tailwind-merge": "^3.3.1",
     "twilio": "^5.7.3",
     "uuid": "^11.1.0",
@@ -61,6 +63,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.11",
+    "@types/leaflet": "^1.9.20",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
