--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "next": "15.4.2",
     "next-auth": "^5.0.0-beta.29",
     "postcss": "^8.5.6",
+    "razorpay": "^2.9.6",
     "react": "19.1.0",
     "react-countup": "^6.5.3",
     "react-day-picker": "^9.8.1",
