--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-dom": "19.1.0",
     "react-intersection-observer": "^9.16.0",
     "react-leaflet": "^5.0.0",
+    "resend": "^6.0.0",
     "tailwind-merge": "^3.3.1",
     "twilio": "^5.7.3",
     "uuid": "^11.1.0",
