--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "next": "15.4.2",
     "next-auth": "^5.0.0-beta.29",
     "postcss": "^8.5.6",
+    "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "razorpay": "^2.9.6",
     "react": "19.1.0",
@@ -70,6 +71,7 @@
     "@tailwindcss/postcss": "^4.1.11",
     "@types/leaflet": "^1.9.20",
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
