--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.53.1",
+    "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "chrono-node": "^2.8.3",
     "class-variance-authority": "^0.7.1",
