--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.6.1",
-    "@supabase/supabase-js": "^2.52.0",
+    "@supabase/supabase-js": "^2.53.1",
+    "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "chrono-node": "^2.8.3",
     "class-variance-authority": "^0.7.1",
