--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.53.1",
     "axios": "^1.11.0",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "chrono-node": "^2.8.3",
     "class-variance-authority": "^0.7.1",
@@ -65,7 +66,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@prisma/client": "^6.13.0",
+    "@prisma/client": "^6.14.0",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/leaflet": "^1.9.20",
     "@types/node": "^20",
