--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "d": "npm run dev",
     "build": "next build",
     "b": "npm run build",
@@ -22,6 +22,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -35,6 +36,7 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.53.1",
     "axios": "^1.11.0",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "chrono-node": "^2.8.3",
     "class-variance-authority": "^0.7.1",
@@ -45,30 +47,36 @@
     "flowbite-datepicker": "^1.3.2",
     "flowbite-react": "^0.12.4",
     "framer-motion": "^12.23.9",
+    "input-otp": "^1.4.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.525.0",
     "next": "15.4.2",
     "next-auth": "^5.0.0-beta.29",
     "postcss": "^8.5.6",
+    "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "razorpay": "^2.9.6",
     "react": "19.1.0",
     "react-countup": "^6.5.3",
     "react-day-picker": "^9.8.1",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.62.0",
     "react-intersection-observer": "^9.16.0",
     "react-leaflet": "^5.0.0",
+    "resend": "^6.0.1",
     "tailwind-merge": "^3.3.1",
     "twilio": "^5.7.3",
     "uuid": "^11.1.0",
-    "vaul": "^1.1.2"
+    "vaul": "^1.1.2",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@prisma/client": "^6.13.0",
+    "@prisma/client": "^6.14.0",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/leaflet": "^1.9.20",
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
