--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-day-picker": "^9.8.1",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
+    "react-hot-toast": "^2.6.0",
     "react-intersection-observer": "^9.16.0",
     "react-leaflet": "^5.0.0",
     "resend": "^6.0.1",
