--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "flowbite-react": "^0.12.4",
     "framer-motion": "^12.23.9",
     "input-otp": "^1.4.2",
+    "js-cookie": "^3.0.5",
+    "js-cookies": "^1.0.4",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.525.0",
     "next": "15.4.2",
