--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "js-cookie": "^3.0.5",
     "js-cookies": "^1.0.4",
     "leaflet": "^1.9.4",
+    "leaflet-ant-path": "^1.3.0",
     "leaflet-routing-machine": "^3.2.12",
     "lucide-react": "^0.525.0",
     "next": "15.4.2",
