--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,14 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "app/auth/sign_in/page.tsx"
-, "app/dashboard/lab/profile/page.jsx", "components/InputField.tsx", "data/mapper.js", "app/api/create-razorpay-order.ts", "pages/api/verify-payment.ts", "prisma/nil.js", "prisma/nil.js"  ],
+    "app/auth/sign_in/page.tsx",
+    "app/dashboard/lab/profile/page.jsx",
+    "components/InputField.tsx",
+    "data/mapper.js",
+    "app/api/create-razorpay-order.ts",
+    "pages/api/verify-payment.ts",
+    "prisma/nil.js",
+    "prisma/nil.js"
+  ],
   "exclude": ["node_modules"]
 }
