--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react-intersection-observer": "^9.16.0",
     "react-leaflet": "^5.0.0",
     "resend": "^6.0.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "twilio": "^5.7.3",
     "uuid": "^11.1.0",
