Created the SideNavbar of lab and done routing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "app/auth/sign_in/page.tsx",
-    "app/dashboard/lab/profile/page.jsx",
+    "app/dashboard/lab/profile/page.tsx",
     "components/InputField.tsx",
     "data/mapper.js",
     "app/api/create-razorpay-order.ts",
