--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "react-hot-toast": "^2.6.0",
     "react-intersection-observer": "^9.16.0",
     "react-leaflet": "^5.0.0",
+    "recharts": "^3.2.0",
     "resend": "^6.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
@@ -101,6 +102,7 @@
     "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/recharts": "^1.8.29",
     "eslint": "^9",
     "eslint-config-next": "15.4.2",
     "husky": "^9.1.7",
