--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "react-hot-toast": "^2.6.0",
     "react-intersection-observer": "^9.16.0",
     "react-leaflet": "^5.0.0",
+    "react-time-picker": "^8.0.2",
     "recharts": "^3.2.0",
     "resend": "^6.0.1",
     "sonner": "^2.0.7",
