--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,15 +27,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts",
-    "app/auth/sign_in/page.tsx",
-    "app/dashboard/lab/profile/page.tsx",
-    "components/InputField.tsx",
-    "data/mapper.js",
-    "app/api/create-razorpay-order.ts",
-    "pages/api/verify-payment.ts",
-    "prisma/nil.js",
-    "prisma/nil.js"
+    ".next/types/**/*.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", ".next", "dist"]
 }
