--- a/package.json
+++ b/package.json
@@ -69,9 +69,11 @@
     "flowbite-datepicker": "^1.3.2",
     "flowbite-react": "^0.12.4",
     "framer-motion": "^12.23.9",
+    "html2canvas": "^1.4.1",
     "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
     "js-cookies": "^1.0.4",
+    "jspdf": "^3.0.3",
     "leaflet": "^1.9.4",
     "leaflet-ant-path": "^1.3.0",
     "leaflet-routing-machine": "^3.2.12",
