--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@headlessui/react": "^2.2.8",
     "@hookform/resolvers": "^5.2.1",
     "@mui/material": "^7.3.2",
+    "@pdf-lib/fontkit": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -69,7 +70,8 @@
     "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
     "js-cookies": "^1.0.4",
-    "jspdf": "^3.0.3",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.28",
     "leaflet": "^1.9.4",
     "leaflet-ant-path": "^1.3.0",
     "leaflet-routing-machine": "^3.2.12",
