--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@emotion/styled": "^11.14.1",
     "@faker-js/faker": "^10.0.0",
     "@fontsource-variable/inter": "^5.2.8",
+    "@google/genai": "^1.22.0",
     "@headlessui/react": "^2.2.8",
     "@hookform/resolvers": "^5.2.1",
     "@mui/material": "^7.3.2",
@@ -60,6 +61,7 @@
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "cheerio": "^1.1.2",
     "chrono-node": "^2.8.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -78,8 +80,12 @@
     "lucide-react": "^0.525.0",
     "next": "^15.5.4",
     "next-auth": "^5.0.0-beta.29",
+    "node-fetch": "^3.3.2",
     "pdf-lib": "^1.17.1",
     "pdf-lib-with-encrypt": "^1.2.1",
+    "pdf-parse": "^1.1.1",
+    "pdf2json": "^3.2.2",
+    "pdfjs-dist": "2.16.105",
     "postcss": "^8.5.6",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
@@ -93,6 +99,7 @@
     "react-hot-toast": "^2.6.0",
     "react-intersection-observer": "^9.16.0",
     "react-leaflet": "^5.0.0",
+    "react-pdftotext": "^1.3.4",
     "react-time-picker": "^8.0.2",
     "recharts": "^3.2.0",
     "resend": "^6.0.1",
@@ -110,6 +117,7 @@
     "@tailwindcss/postcss": "^4.1.11",
     "@types/leaflet": "^1.9.20",
     "@types/node": "^20.19.11",
+    "@types/pdfjs-dist": "^2.10.377",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
