--- a/package.json
+++ b/package.json
@@ -74,8 +74,8 @@
     "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
     "js-cookies": "^1.0.4",
-    "jspdf": "^2.5.1",
-    "jspdf-autotable": "^3.5.28",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "leaflet": "^1.9.4",
     "leaflet-ant-path": "^1.3.0",
     "leaflet-routing-machine": "^3.2.12",
@@ -87,7 +87,7 @@
     "pdf-lib-with-encrypt": "^1.2.1",
     "pdf-parse": "^1.1.1",
     "pdf2json": "^3.2.2",
-    "pdfjs-dist": "2.16.105",
+    "pdfjs-dist": "^5.4.296",
     "postcss": "^8.5.6",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
