semi build process done! linting (incomplete)

--- a/package.json
+++ b/package.json
@@ -18,19 +18,13 @@
   "scripts": {
     "seed": "ts-node prisma/seed.ts",
     "dev": "next dev",
-    "d": "npm run dev",
-    "build": "next build",
-    "b": "npm run build",
+    "build": "next build --no-lint",
     "start": "next start",
-    "s": "npm run start",
     "lint": "next lint",
-    "l": "npm run lint",
+    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "type-check": "tsc --noEmit",
-    "t": "npm run type-check",
     "prisma-generate": "prisma generate",
-    "pg": "npm run prisma-generate",
     "prisma-migrate": "prisma migrate dev",
-    "pm": "npm run prisma-migrate",
     "test": "echo \"No tests yet\" && exit 0",
     "prepare": "husky"
   },
@@ -115,6 +109,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@next/eslint-plugin-next": "^15.5.4",
     "@prisma/client": "^6.14.0",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/leaflet": "^1.9.20",
