--- a/package.json
+++ b/package.json
@@ -18,19 +18,13 @@
   "scripts": {
     "seed": "ts-node prisma/seed.ts",
     "dev": "next dev",
-    "d": "npm run dev",
-    "build": "next build",
-    "b": "npm run build",
+    "build": "next build --no-lint",
     "start": "next start",
-    "s": "npm run start",
     "lint": "next lint",
-    "l": "npm run lint",
+    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "type-check": "tsc --noEmit",
-    "t": "npm run type-check",
     "prisma-generate": "prisma generate",
-    "pg": "npm run prisma-generate",
     "prisma-migrate": "prisma migrate dev",
-    "pm": "npm run prisma-migrate",
     "test": "echo \"No tests yet\" && exit 0",
     "prepare": "husky"
   },
@@ -74,8 +68,8 @@
     "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
     "js-cookies": "^1.0.4",
-    "jspdf": "^2.5.1",
-    "jspdf-autotable": "^3.5.28",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "leaflet": "^1.9.4",
     "leaflet-ant-path": "^1.3.0",
     "leaflet-routing-machine": "^3.2.12",
@@ -87,7 +81,7 @@
     "pdf-lib-with-encrypt": "^1.2.1",
     "pdf-parse": "^1.1.1",
     "pdf2json": "^3.2.2",
-    "pdfjs-dist": "2.16.105",
+    "pdfjs-dist": "^5.4.296",
     "postcss": "^8.5.6",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
@@ -115,6 +109,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@next/eslint-plugin-next": "^15.5.4",
     "@prisma/client": "^6.14.0",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/leaflet": "^1.9.20",
