--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "seed": "ts-node prisma/seed.ts",
     "dev": "next dev",
-    "build": "next build --no-lint",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint .",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
