Pushing remaining chages (#37)
* commit

* initial_lint

* working lint?

* Adding Vercel Insights and Web Analytics

* fixing minor open envs

* writing prettier changes

* fixing docker build

* minor fixes

--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
   "scripts": {
     "seed": "ts-node prisma/seed.ts",
     "dev": "next dev",
-    "build": "next build --no-lint",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint .",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "type-check": "tsc --noEmit",
-    "prisma-generate": "prisma generate",
-    "prisma-migrate": "prisma migrate dev",
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev",
     "test": "echo \"No tests yet\" && exit 0",
     "prepare": "husky"
   },
