--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
   "scripts": {
     "seed": "ts-node prisma/seed.ts",
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build --no-lint",
     "start": "next start",
     "lint": "eslint .",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "type-check": "tsc --noEmit",
-    "db:generate": "prisma generate",
-    "db:migrate": "prisma migrate dev",
+    "prisma-generate": "prisma generate",
+    "prisma-migrate": "prisma migrate dev",
     "test": "echo \"No tests yet\" && exit 0",
     "prepare": "husky"
   },
@@ -38,6 +38,7 @@
     "@hookform/resolvers": "^5.2.1",
     "@mui/material": "^7.3.2",
     "@pdf-lib/fontkit": "^1.1.1",
+    "@prisma/client": "^5.10.2",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -70,7 +71,7 @@
     "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
     "js-cookies": "^1.0.4",
-    "jspdf": "^3.0.3",
+    "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "leaflet": "^1.9.4",
     "leaflet-ant-path": "^1.3.0",
@@ -85,6 +86,7 @@
     "pdf2json": "^3.2.2",
     "pdfjs-dist": "^5.4.296",
     "postcss": "^8.5.6",
+    "prisma": "^5.10.2",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "razorpay": "^2.9.6",
@@ -112,7 +114,6 @@
   "devDependencies": {
     "@eslint/js": "^9.38.0",
     "@next/eslint-plugin-next": "^15.5.6",
-    "@prisma/client": "^6.14.0",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/leaflet": "^1.9.20",
     "@types/node": "^20.19.11",
@@ -132,7 +133,6 @@
     "i": "^0.3.7",
     "npm": "^11.5.2",
     "prettier": "^3.6.2",
-    "prisma": "^6.16.2",
     "tailwindcss": "^4.1.11",
     "ts-node": "^10.9.2",
     "tw-animate-css": "^1.3.5",
