--- a/package.json
+++ b/package.json
@@ -23,10 +23,9 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "type-check": "tsc --noEmit",
-    "prisma-generate": "prisma generate",
-    "prisma-migrate": "prisma migrate dev",
     "test": "echo \"No tests yet\" && exit 0",
-    "prepare": "husky"
+    "prepare": "husky",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -38,7 +37,7 @@
     "@hookform/resolvers": "^5.2.1",
     "@mui/material": "^7.3.2",
     "@pdf-lib/fontkit": "^1.1.1",
-    "@prisma/client": "^5.10.2",
+    "@prisma/client": "^7.0.1",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -64,6 +63,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "dotenv": "^17.2.3",
     "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "framer-motion": "^12.23.9",
@@ -86,7 +86,6 @@
     "pdf2json": "^3.2.2",
     "pdfjs-dist": "^5.4.296",
     "postcss": "^8.5.6",
-    "prisma": "^5.10.2",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "razorpay": "^2.9.6",
@@ -133,6 +132,7 @@
     "i": "^0.3.7",
     "npm": "^11.5.2",
     "prettier": "^3.6.2",
+    "prisma": "^7.0.1",
     "tailwindcss": "^4.1.11",
     "ts-node": "^10.9.2",
     "tw-animate-css": "^1.3.5",
