--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "@hookform/resolvers": "^5.2.1",
     "@mui/material": "^7.3.2",
     "@pdf-lib/fontkit": "^1.1.1",
-    "@prisma/client": "^7.0.1",
+    "@prisma/adapter-pg": "^7.1.0",
+    "@prisma/client": "^7.1.0",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
