--- a/package.json
+++ b/package.json
@@ -134,6 +134,7 @@
     "npm": "^11.5.2",
     "prettier": "^3.6.2",
     "prisma": "^7.0.1",
+    "supabase": "^2.65.3",
     "tailwindcss": "^4.1.11",
     "ts-node": "^10.9.2",
     "tw-animate-css": "^1.3.5",
